--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
 <body>
   <div class="chat">
     <div class="chat-title">
-      <h1>Fabio Ottaviani</h1>
-      <h2>Supah</h2>
-      <figure class="avatar">
-        <img src="image/avatar.png" />
-      </figure>
+      <h1>Message</h1>
     </div>
-    <div class="messages">
-      <div class="messages-content"></div>
+    <div id="messages" class="messages">
+      <div id="messages-content" class="messages-content"></div>
     </div>
     <div class="message-box">
-      <textarea type="text" class="message-input" placeholder="Type message..."></textarea>
+      <textarea id="message-input" type="text" class="message-input" placeholder="Say something"></textarea>
       <button type="submit" class="message-submit">Send</button>
     </div>
   </div>
   <script src='js/jquery.min.js'></script>
+  <script src='js/jquery.timeago.js'></script>
   <script src='js/jquery.mCustomScrollbar.concat.min.js'></script>
   <script src="js/index.js"></script>
 </body>
