--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="chat">
+  <div id="chat" class="chat">
     <div class="chat-title">
       <h1>Message</h1>
     </div>
@@ -17,8 +17,8 @@
       <div id="messages-content" class="messages-content"></div>
     </div>
     <div class="message-box">
-      <textarea id="message-input" type="text" class="message-input" placeholder="Say something"></textarea>
-      <button type="submit" class="message-submit">Send</button>
+      <textarea id="message-input" maxlength="150" type="text" class="message-input" placeholder="Say something"></textarea>
+      <button id="message-submit" type="submit" class="message-submit">Send</button>
     </div>
   </div>
   <script src='js/jquery.min.js'></script>
