--- a/tab/index.html
+++ b/tab/index.html
@@ -22,9 +22,7 @@
         <div class='card'>
           <h1>Home</h1>
           <p>
-            <div class="css-script-ads">
-              Welcome home
-            </div>
+            Welcome home
           </p>
         </div>
       </div>
@@ -48,7 +46,8 @@
             cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for
             some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our
             lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite
-            ends.</p>
+            ends.
+          </p>
         </div>
       </div>
       <div class='tab-c'>
