--- a/tab/index.html
+++ b/tab/index.html
@@ -1,71 +1,42 @@
-<!doctype html>
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Animated Vertical Tabbed Navigation Demo</title>
-  <link rel="stylesheet" href="index.css">
+    <title>Tab</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <div class='content'>
-    <div class='tabs-v'>
-      <input checked id='rad1' name='rad' type='radio'>
-      <label data-text='Home' for='rad1'></label>
-      <input id='rad2' name='rad' type='radio'>
-      <label data-text='About' for='rad2'></label>
-      <input id='rad3' name='rad' type='radio'>
-      <label data-text='Work' for='rad3'></label>
-      <input id='rad4' name='rad' type='radio'>
-      <label data-text='Contact' for='rad4'></label>
-      <div class='tab-c'>
-        <div class='card'>
-          <h1>Home</h1>
-          <p>
-            Welcome home
-          </p>
+    <div class="box">
+        <div id="side-bar" class="side-bar">
+            <div class="side-bar-content">
+                <a href="#" class="side-bar-item active">
+                    Flight
+                </a>
+                <a href="#" class="side-bar-item">
+                    Train
+                </a>
+                <a href="#" class="side-bar-item">
+                    Restaurant
+                </a>
+            </div>
         </div>
-      </div>
-      <div class='tab-c'>
-        <div class='card'>
-          <h1>About</h1>
-          <p>Yeah, I like animals better than people sometimes... Especially dogs. Dogs are the best. Every time you come home,
-            they act like they haven't seen you in a year. And the good thing about dogs... is they got different dogs for
-            different people. Like pit bulls. The dog of dogs. Pit bull can be the right man's best friend... or the wrong
-            man's worst enemy. You going to give me a dog for a pet, give me a pit bull. Give me... Raoul. Right, Omar? Give
-            me Raoul.</p>
+        <div class="tabe-box">
+            <!-- flight section -->
+            <div class="tabe active">
+                Flight
+            </div>
+            <!-- train section -->
+            <div class="tabe">
+                Train
+            </div>
+            <!-- restaurant section -->
+            <div class="tabe">
+                Restaurant
+            </div>
         </div>
-      </div>
-      <div class='tab-c'>
-        <div class='card'>
-          <h1>Work</h1>
-          <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine.
-            You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water.
-            We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected,
-            you and I. We're on the same curve, just on opposite ends. Your bones don't break, mine do. That's clear. Your
-            cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for
-            some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our
-            lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite
-            ends.
-          </p>
-        </div>
-      </div>
-      <div class='tab-c'>
-        <div class='card'>
-          <h1>Contact</h1>
-          <p>The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men.
-            Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for
-            he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great
-            vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name
-            is the Lord when I lay My vengeance upon thee. The path of the righteous man is beset on all sides by the iniquities
-            of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds
-            the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children.
-            And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and
-            destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-        </div>
-      </div>
     </div>
-  </div>
+    <script src="../js/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
