--- a/tab/index.html
+++ b/tab/index.html
@@ -6,32 +6,29 @@
 </head>
 
 <body>
-    <div class="box">
+    <div id="box" class="box">
         <div id="side-bar" class="side-bar">
             <div class="side-bar-content">
-                <a href="#" class="side-bar-item active">
-                    Flight
+                <a href="#" data="user-online" class="user-online side-bar-item active">
+                    <i class="icon"></i>
                 </a>
-                <a href="#" class="side-bar-item">
-                    Train
+                <a href="#" data="waiting-board" class="waiting-board side-bar-item">
+                    <i class="icon"></i>
                 </a>
-                <a href="#" class="side-bar-item">
-                    Restaurant
+                <a href="#" data="playing-board" class="playing-board side-bar-item">
+                    <i class="icon"></i>
                 </a>
             </div>
         </div>
         <div class="tabe-box">
-            <!-- flight section -->
-            <div class="tabe active">
-                Flight
+            <div class="user-online tabe active">
+                User Online
             </div>
-            <!-- train section -->
-            <div class="tabe">
-                Train
+            <div class="waiting-board tabe">
+                Waiting Board
             </div>
-            <!-- restaurant section -->
-            <div class="tabe">
-                Restaurant
+            <div class="playing-board tabe">
+                Playing Board
             </div>
         </div>
     </div>
