--- a/tab/index.html
+++ b/tab/index.html
@@ -11,24 +11,42 @@
             <div class="side-bar-content">
                 <a href="#" data="user-online" class="user-online side-bar-item active">
                     <i class="icon"></i>
+                    <span class="numb">10</span>
                 </a>
                 <a href="#" data="waiting-board" class="waiting-board side-bar-item">
                     <i class="icon"></i>
+                    <span class="numb">10</span>
                 </a>
                 <a href="#" data="playing-board" class="playing-board side-bar-item">
                     <i class="icon"></i>
+                    <span class="numb">10</span>
                 </a>
             </div>
         </div>
         <div class="tabe-box">
             <div class="user-online tabe active">
-                User Online
+                <div class="title">
+                    User Online
+                </div>
+                <div class="content">
+                    content
+                </div>
             </div>
             <div class="waiting-board tabe">
-                Waiting Board
+                <div class="title">
+                    Waiting Board
+                </div>
+                <div class="content">
+                    content
+                </div>
             </div>
             <div class="playing-board tabe">
-                Playing Board
+                <div class="title">
+                    Playing Board
+                </div>
+                <div class="content">
+                    content
+                </div>
             </div>
         </div>
     </div>
