- update user content

--- a/tab/index.html
+++ b/tab/index.html
@@ -23,16 +23,15 @@
                 </a>
             </div>
         </div>
-        <div class="tabe-box">
-            <div class="user-online tabe active">
+        <div class="tab-box">
+            <div class="user-online tab active">
                 <div class="title">
                     User Online
                 </div>
-                <div class="content">
-                    content
+                <div id="tab-content" class="content">
                 </div>
             </div>
-            <div class="waiting-board tabe">
+            <div class="waiting-board tab">
                 <div class="title">
                     Waiting Board
                 </div>
@@ -40,7 +39,7 @@
                     content
                 </div>
             </div>
-            <div class="playing-board tabe">
+            <div class="playing-board tab">
                 <div class="title">
                     Playing Board
                 </div>
