- fixe count numb

--- a/tab/index.html
+++ b/tab/index.html
@@ -38,7 +38,7 @@
                     <a href="#" class="board" data="0001" onclick="ActiveBox.boardClick(this, true);">
                         <div class="user">
                             <figure class="avatar"><img src="../image/avatar.png"></figure>
-                            <span class="name">User 000</span>
+                            <span class="name">User dasf asd f asdf as df asd fas d000</span>
                         </div>
                         <div class="vs">vs
                             <span></span><span></span><span></span>
@@ -59,7 +59,7 @@
                         <div class="vs">vs</div>
                         <div class="right-user user">
                             <figure class="avatar"><img src="../image/avatar.png"></figure>
-                            <span class="name">User 000</span>
+                            <span class="name">User asd fa sdf asd fa sdf as f as 000</span>
                         </div>
                     </a>
                 </div>
