--- a/tab/index.html
+++ b/tab/index.html
@@ -2,28 +2,28 @@
 
 <head>
     <title>Tab</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-    <div id="box" class="box">
-        <div id="side-bar" class="side-bar">
-            <div class="side-bar-content">
-                <a href="#" data="user-online" class="user-online side-bar-item">
+    <div id="state">
+        <div id="side-bar">
+            <div class="content">
+                <a href="#" data="user-online" class="user-online item">
                     <i class="icon"></i>
                     <span class="numb">10</span>
                 </a>
-                <a href="#" data="waiting-board" class="waiting-board side-bar-item">
+                <a href="#" data="waiting-board" class="waiting-board item">
                     <i class="icon"></i>
                     <span class="numb">10</span>
                 </a>
-                <a href="#" data="playing-board" class="playing-board side-bar-item active">
+                <a href="#" data="playing-board" class="playing-board item active">
                     <i class="icon"></i>
                     <span class="numb">10</span>
                 </a>
             </div>
         </div>
-        <div id="tab-box" class="tab-box">
+        <div id="tab-state">
             <div class="user-online tab">
                 <div class="title">
                     User Online
