- make sass for state

--- a/tab/index.html
+++ b/tab/index.html
@@ -7,19 +7,19 @@
 
 <body>
     <div id="state">
-        <div id="side-bar">
+        <div id="side-bar-state">
             <div class="content">
                 <a href="#" data="user-online" class="user-online item">
                     <i class="icon"></i>
-                    <span class="numb">10</span>
+                    <span class="count">10</span>
                 </a>
                 <a href="#" data="waiting-board" class="waiting-board item">
                     <i class="icon"></i>
-                    <span class="numb">10</span>
+                    <span class="count">10</span>
                 </a>
                 <a href="#" data="playing-board" class="playing-board item active">
                     <i class="icon"></i>
-                    <span class="numb">10</span>
+                    <span class="count">10</span>
                 </a>
             </div>
         </div>
