--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="/state.html">state</a>
   <div id="chat" class="chat">
     <div class="chat-title">
       <h1>Message</h1>
@@ -24,7 +25,7 @@
   <script src='js/jquery.min.js'></script>
   <script src='js/jquery.timeago.js'></script>
   <script src='js/jquery.mCustomScrollbar.concat.min.js'></script>
-  <script src="js/index.js"></script>
+  <script src="js/chat.js"></script>
 </body>
 
 </html>
