--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <a href="/state.html">state</a>
-  <div id="chat" class="chat">
+  <div id="chat">
     <div class="chat-title">
       <h1>Message</h1>
     </div>
