--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="chat-title">
       <h1>Message</h1>
     </div>
-    <div id="messages" class="messages">
-      <div id="messages-content" class="messages-content"></div>
+    <div id="messages">
+      <div id="messages-content"></div>
     </div>
     <div class="message-box">
-      <textarea id="message-input" maxlength="150" type="text" class="message-input" placeholder="Say something"></textarea>
-      <button id="message-submit" type="submit" class="message-submit">Send</button>
+      <textarea id="message-input" maxlength="150" type="text" placeholder="Say something"></textarea>
+      <button id="message-submit" type="submit">Send</button>
     </div>
   </div>
   <script src='js/jquery.min.js'></script>
