--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <a href="/state.html">state</a>
+  <a href="/editor">editor</a>
   <div id="chat">
     <div class="chat-title">
       <h1>Message</h1>
