--- a/editor/index.html
+++ b/editor/index.html
@@ -11,9 +11,9 @@
 <body>
     <div id="content">
         <div class="ze ie"></div>
+        <button type="button" class="g-button g-button-submit" id='stext'>Text</button>
+        <button type="button" class="g-button g-button-submit" id='shtml'>HTML</button>
         <div id="controls" style="margin-bottom: 10px;">
-            <button type="button" class="g-button g-button-submit" id='stext'>Text</button>
-            <button type="button" class="g-button g-button-submit" id='shtml'>HTML</button>
             <a id="bold" style="color:black;display: inline-block;" class="font-bold">
                 <button type="button">B</button>
             </a>
@@ -36,7 +36,7 @@
             </select>
         </div>
         <iframe frameborder="0" id="textEditor"></iframe>
-        <textarea name="text" id='text' rows="6" cols="53></textarea>
+        <textarea name="text" id='text' rows="6" cols="53"></textarea>
     </div>
 </body>
 
