--- a/editor/index.html
+++ b/editor/index.html
@@ -23,6 +23,9 @@
             <a id="link" class="link" style="display: inline-block;">
                 <button type="button">Link</button>
             </a>
+            <a id="mention" class="link" style="display: inline-block;">
+                <button type="button">Mention</button>
+            </a>
         </div>
         <iframe frameborder="0" id="textEditor"></iframe>
         <textarea name="text" id='text' rows="6" cols="53"></textarea>
