- update sytle name

--- a/state.html
+++ b/state.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Tab</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/box.css">
 </head>
 
 <body>
