--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Chat</title>
   <link rel='stylesheet prefetch' href='css/jquery.mCustomScrollbar.min.css'>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/box.css">
 </head>
 
 <body>
