--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <script src='js/jquery.min.js'></script>
   <script src='js/jquery.timeago.js'></script>
   <script src='js/jquery.mCustomScrollbar.concat.min.js'></script>
-  <script src="js/chat.js"></script>
+  <script src="js/box.js"></script>
+  <script src="js/MessageBox.js"></script>
+  <script src="js/testMessageBox.js"></script>
 </body>
 
 </html>
