--- a/state.html
+++ b/state.html
@@ -45,7 +45,9 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/state.js"></script>
+    <script src="js/box.js"></script>
+    <script src="js/StateBox.js"></script>
+    <script src="js/testStateBox.js"></script>
 </body>
 
 </html>
