--- a/state.html
+++ b/state.html
@@ -8,7 +8,7 @@
 <body>
     <div id="state">
         <div id="side-bar-state">
-            <div class="content">
+            <div class="container">
                 <a href="#" data="user-online" class="user-online item">
                     <i class="icon"></i>
                     <span class="count">10</span>
@@ -28,19 +28,19 @@
                 <div class="title">
                     User Online
                 </div>
-                <div class="content"></div>
+                <div class="container"></div>
             </div>
             <div class="waiting-board tab">
                 <div class="title">
                     Waiting Board
                 </div>
-                <div class="content"></div>
+                <div class="container"></div>
             </div>
             <div class="playing-board tab active">
                 <div class="title">
                     Playing Board
                 </div>
-                <div class="content"></div>
+                <div class="container"></div>
             </div>
         </div>
     </div>
